[package]
name = "zett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.1", features=["cargo"]}
colored = "2.0.0"
chrono      = "0.4.19"

sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "chrono",
  "sqlite",
] }

async-trait = "0.1.58"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
