[package]
name = "mds"
version = "0.3.1"
author = ["dj8yf0μl"]
description = "A skim-based `*.md` explore and surf note-taking tool"
repository = "https://github.com/dj8yfo/mds"
homepage = "https://youtu.be/z4DFN72QVSw"
keywords = ["note-taking", "cli", "cli-glue", "skim"]
readme = "README.md"

edition = "2021"

license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.1", features=["cargo"]}
colored = "2.0.0"
chrono      = "0.4.19"

sql-builder = "3"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "chrono",
  "sqlite",
] }

skim = "0.10.2"
async-trait = "0.1.58"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
async-std = "1.12.0"
comfy-table = "6.1.4"

regex = "1.7.1"
duct = "0.13"

xdg = "2.4.1"
kdl = "4.6.0"